@@ -8,12 +8,32 @@ package onboarding;
  */
 
 
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
 public class Problem5 {
     public static List<Integer> solution(int money) {
-        List<Integer> answer = Collections.emptyList();
-        return answer;
+        //List<Integer> answer = Collections.emptyList();
+
+        ArrayList<Integer> billList = new ArrayList<Integer>(List.of(50000,10000,5000,1000,500,100,50,10,1));
+
+        for(int i=0; i<9; i++){
+            int cash = billList.get(i);
+            if(money/cash>0);
+            billList.set(i,money/cash);
+            money = money % cash;
+
+        }
+
+
+
+        return billList;
     }
+
+
+
+
+
+
 }
